[engine] project architecture rework  we now have a folder for each sub domain of the engine (core, application, systems, window, math graphics, serialization)
[editor] create the engine editor
consist of an imgui window (sdl backend) which accept command as string

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,16 +24,40 @@ function(add_headers VAR)
   set(${VAR} ${all_files} PARENT_SCOPE)
 endfunction()
 
-add_sources(KAIROS_SOURCES engine/graphics/font engine/graphics/program engine/graphics/shader engine/graphics/ibo engine/graphics/vao engine/graphics/vbo engine/graphics/texture engine/graphics/brush engine/graphics/painter engine/graphics/canvas engine/graphics/rendering_layer engine/graphics/opengl_helper engine/core/window engine/graphics/opengl_context engine/core/command_line_parser engine/core/application engine/core/event_listener
-                           engine/core/logger engine/core/mathlib engine/core/messages
+add_sources(KAIROS_SOURCES editor/imgui_console_command editor/error_command editor/command_parser 
+                           editor/log_command editor/editor editor/imgui_opengl_renderer editor/imgui_sdl_backend
+                           engine/window/sdl_window engine/application/sdl_application engine/application/log_application
+                           engine/application/core_application  engine/application/command_line_parser
+                           engine/math/transform engine/graphics/log_renderer engine/systems/shader_system
+                           engine/graphics/font engine/graphics/program engine/graphics/shader
+                           engine/graphics/vao engine/graphics/buffer_object engine/graphics/texture
+                           engine/graphics/brush engine/graphics/painter engine/graphics/canvas
+                           engine/graphics/rendering_layer engine/graphics/opengl_helper 
+                           engine/graphics/opengl_context
+                           engine/core/event_listener engine/core/logger engine/math/mathlib engine/core/messages
                            )
 
-add_headers(KAIROS_HEADERS engine/graphics/font engine/graphics/program engine/graphics/shader engine/graphics/ibo engine/graphics/vao engine/graphics/vbo engine/graphics/texture engine/graphics/brush engine/core/rect engine/graphics/pen engine/graphics/painter engine/graphics/canvas engine/graphics/rendering_layer engine/graphics/opengl_helper engine/core/window engine/graphics/opengl_context engine/core/command_line_parser engine/core/filesystem engine/core/globals engine/core/application engine/core/event_listener
-                           engine/core/error
+add_headers(KAIROS_HEADERS editor/imgui_console_command editor/error_command editor/command_parser
+                           editor/log_command editor/command_interface editor/command_history 
+                           editor/editor editor/imgui_backend editor/imgui_renderer editor/imgui_opengl_renderer
+                           editor/imgui_sdl_backend engine/core/contract 
+                           engine/window/window engine/window/sdl_window 
+                           engine/application/application engine/application/sdl_application
+                           engine/application/log_application engine/application/core_application engine/application/command_line_parser 
+                           engine/serialization/serialization_strategy engine/serialization/serializer engine/math/transform 
+                           engine/core/formattable engine/core/makable engine/graphics/log_renderer 
+                           engine/graphics/2d_renderer_interface engine/systems/shader_system engine/core/kairos_lib 
+                           engine/graphics/vertex engine/graphics/font engine/graphics/program engine/graphics/shader 
+                           engine/graphics/vao engine/graphics/buffer_object engine/graphics/texture 
+                           engine/graphics/brush engine/math/rect engine/graphics/pen engine/graphics/painter 
+                           engine/graphics/canvas engine/graphics/rendering_layer engine/graphics/opengl_helper 
+                           engine/graphics/opengl_context
+                           engine/core/filesystem engine/core/globals
+                           engine/core/event_listener engine/core/error
                            engine/core/json engine/core/logger
-                           engine/core/mathlib engine/core/messages engine/graphics/stb_image engine/core/types)
-
-add_library(kairos_engine ${KAIROS_HEADERS} ${KAIROS_SOURCES})
+                           engine/math/mathlib engine/core/messages engine/graphics/stb_image engine/core/types)
+set(IMGUI_SRCS extern/imgui/imgui.h extern/imgui/imgui.cpp extern/imgui/imconfig.h extern/imgui/imgui_internal.h extern/imgui/imgui_draw.cpp extern/imgui/imgui_demo.cpp extern/imgui/imgui_widgets.cpp extern/imgui/imstb_rectpack.h extern/imgui/imstb_textedit.h extern/imgui/imstb_truetype.h)
+add_library(kairos_engine ${KAIROS_HEADERS} ${KAIROS_SOURCES} ${IMGUI_SRCS})
 
 if (MSVC)
     function(group_sources VAR)
@@ -50,13 +74,24 @@ endif ()
 
 # Add include dir
 target_include_directories(kairos_engine PUBLIC
+        ${PROJECT_SOURCE_DIR}/source/engine/application
         ${PROJECT_SOURCE_DIR}/source/engine/core
         ${PROJECT_SOURCE_DIR}/source/engine/graphics
+        ${PROJECT_SOURCE_DIR}/source/engine/math
+        ${PROJECT_SOURCE_DIR}/source/engine/serialization
+        ${PROJECT_SOURCE_DIR}/source/engine/systems
+        ${PROJECT_SOURCE_DIR}/source/engine/window
+        ${PROJECT_SOURCE_DIR}/source/editor
         extern/cxxopts/include
         extern/fmt/include
         extern/nameof/include
         extern/glad/include
-        extern/glm)
+        extern/glm
+        extern/imgui
+        extern/SDL2-2.0.12/include
+        extern/SDL2_image-2.0.5/include
+        extern/SDL2_mixer-2.0.4/include
+        extern/SDL2_ttf-2.0.15/include)
 
 # Link this 'library' to use the warnings specified in CompilerWarnings.cmake
 add_library(project_warnings INTERFACE)
@@ -85,11 +120,8 @@ if (ENABLE_PCH)
     # This sets a global PCH parameter, each project will build its own PCH, which
     # is a good idea if any #define's change
     target_precompile_headers(project_options INTERFACE <vector> <string> <map> <utility>)
-    target_precompile_headers(project_options PRIVATE types.h)
+    target_precompile_headers(project_options PRIVATE types.h kairos_lib.h)
 endif ()
-
-# glfw
-add_subdirectory(extern/glfw EXCLUDE_FROM_ALL)
 
 # glad
 add_subdirectory(extern/glad EXCLUDE_FROM_ALL)
@@ -97,20 +129,14 @@ add_subdirectory(extern/glad EXCLUDE_FROM_ALL)
 # glm
 add_subdirectory(extern/glm EXCLUDE_FROM_ALL)
 
-# freetype
-add_subdirectory(extern/freetype-2.10.0 EXCLUDE_FROM_ALL)
-
 # fmt
 add_subdirectory(extern/fmt EXCLUDE_FROM_ALL)
 
 # json
 add_subdirectory(extern/json EXCLUDE_FROM_ALL)
 
-# libsndfile
-add_subdirectory(extern/libsndfile EXCLUDE_FROM_ALL)
-
-# openal-soft
-add_subdirectory(extern/openal-soft EXCLUDE_FROM_ALL)
+# sdl2
+add_subdirectory(extern/SDL2-2.0.12 EXCLUDE_FROM_ALL)
 
 # tests
 if (ENABLE_TESTING)
@@ -122,4 +148,4 @@ endif ()
 add_subdirectory(source)
 
 # Link dependencies
-target_link_libraries(kairos_engine fmt glad glfw freetype OpenAL)
+target_link_libraries(kairos_engine fmt glad SDL2-static)
