Create type erased window and system_event classes. The goal is to accept in a value based semantic class any implementation satisfying an interface, thus we can change backend more easily in the future

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "extern/Nuklear"]
 	path = extern/Nuklear
 	url = https://github.com/Immediate-Mode-UI/Nuklear.git
+[submodule "extern/Catch2"]
+	path = extern/Catch2
+	url = https://github.com/catchorg/Catch2.git
